# nano-rust-api

./: .env-example  .gitignore  Cargo.toml  README.md  README_WEBSOCKET_TESTS.md  SETUP_WSS_LOCAL.md  TEST_WEBSOCKET.md
migrations/: 20251123121552_add_role_table.up.sql  20251123121724_add_user_table.up.sql  20251123121736_add_user_role_table.up.sql  20251126105813_create_tph_stats_table.down.sql  20251126105813_create_tph_stats_table.up.sql  20251126105951_create_daily_peak_tps_table.down.sql  20251126105951_create_daily_peak_tps_table.up.sql  20251127120000_create_web_router_logs_table.down.sql  20251127120000_create_web_router_logs_table.up.sql  20251128134443_create_api_router_logs_table.down.sql  20251128134443_create_api_router_logs_table.up.sql  20251128134704_create_rate_limiter_logs_table.down.sql  20251128134704_create_rate_limiter_logs_table.up.sql  20260110119999_create_api_key_table.down.sql  20260110119999_create_api_key_table.up.sql  20260110120000_create_paid_transactions_table.down.sql  20260110120000_create_paid_transactionss_table.up.sql  20260110120001_create_webhook_logs_table.down.sql  20260110120001_create_webhook_logs_table.up.sql  20260119183603_blocked_accounts_table.down.sql  20260119183603_blocked_accounts_table.up.sql  20260201154056_topup_api_key_credits_table.down.sql  20260201154056_topup_api_key_credits_table.up.sql  20260215120240_remove_tx_metadata_webhook.down.sql  20260215120240_remove_tx_metadata_webhook.up.sql
src/: main.rs
src/background_services/: mod.rs  price.rs
src/database/: api_key.rs  mod.rs  role.rs  user.rs  (+3 more)
static/: privacy.html
(+130 files in other folders)
