[package]
name = "ifenpay_rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.7", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Nano RPC
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Environment variables
dotenvy = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }

# Crypto
hex = "0.4"
rand = "0.8"

# Async utilities
async-trait = "0.1"

# Concurrent hashmap
dashmap = { version = "6.1", features = ["serde"] }
once_cell = "1.21.3"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal", "macros"], default-features = false }
bcrypt = "0.17.1"
aes = "0.7.5"
block-modes = "0.8.0"
base64 = "0.22.1"
cipher = "0.4.4"
totp-rs = "5.7.0"
base32 = "0.5.1"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
futures = "0.3.31"
sha2 = "0.10.9"
uuid = { version = "1.19.0", features = ["v4"] }
sysinfo = "0.33"
tera = "1.20.1"
futures-util = "0.3.31"
tokio-tungstenite = "0.28.0"
